welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: ')' expected but integer literal found.
  case (<60,false)=>return 0}
         ^caughtSpeeding:2: error: '=>' expected but '}' found.
  case (<60,false)=>return 0}
                            ^