welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = { (speed,isBirthday) match {
  case (<60,false)=>return 0}
}